# innowise-data-trainee

task-3/: readme.md  result.sql
task_1/: DB_class.py  config.json  config.py  docker-compose.yml  first_results.json  main.py  pg_connector.py  pg_container.py  pyproject.toml  readme.md  second_results.json  start.sh  test_sql.py  try.py
task_1/python_script/: Dockerfile  main.py  pg_connector.py  pg_container.py  pyproject.toml
task_1/python_script/data/: rooms.json  rooms_schema.json  students_schema.json
task_1/results/: second_results.json
task_1/sqlscripts/: first.sql  fourth.sql  second.sql  third.sql
task_1/sqlscripts/initdb/: init.sql
task_2/pandas_numpy_tasks-main/: assignment_numpy.ipynb  assignment_pandas.ipynb
task_4/: readme.md  result.py
